public/style.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");

html{
    scroll-behavior: smooth;
}

body {
    padding-top: 60px;
    background-color: #292929;
    font-family: 'Poppins';
    margin: 0%;
    display: flex; /*added*/
    flex-direction: column; /*added*/
  }

.navbar-custom{
    background-color: #292929;
}

.navbar-custom .navbar-brand,
.navbar-custom .navbar-text button {
    color: white;
}

.navbar ul.navbar-nav li.nav-item a.nav-link {
    color: white;
  }


/************************** EVERYTHING *****************************/
.contentSquare{
    height: 100%;
    width: 100%; /* */
    padding: 30px;
}

#welcome{
    color: white;
    background-color: #292929;
    height:65vh;
    width: 100%;
}

.main{
    width:100%;
    height: 50%;
    font-size: 15vh;
    margin-top: 100px;
    display:flex;
    align-items: center;
    justify-content: center;
}

.career{
    font-size:10vh;
    margin-top: 8%;
}

.aspiring{
    font-size: 5vh;
}

.input-cursor {
    width: 2px;
    height: 50%;
    background-color: #39ff14;
    margin-left: 1%;
}

@keyframes blink {
    0% {opacity: 1;}
    40% {opacity: 1;}
    60% {opacity: 0;}
    100% {opacity: 0;}
}

.input-cursor { 
    animation: blink .6s linear infinite alternate;
}


/* ************************ BIO SECTION **************************** */
#biography{
    color: #292929;
    background-color: white;
    text-align: center;

}

.allBio{
    padding:30px;
    margin-bottom: 10px;
    height:100%;
    display: grid;
    grid-gap:10px;
    grid-template-columns: auto auto;
}

.bioItem{
    text-align: center;
    padding:10px;
}
/*
#slide{
    width: 100%;
    height: 90%;
    padding-left: 5px;
    padding-top: 20px;

}

#slide img{
    width: 50%;
    height:90%;
}
*/
.aboutMeDescription{
    width: 100%;
    text-align: left;
    margin-left: 15%;
    margin-right: 50px;
}

.aboutMeImage{
    width: 50%;
    height: 90%;
    border-radius: 30px;
    margin-right: 10%;
}

.yearDescription{
    margin-right: 10%;
}
/* ************************ EXPERIENCE **************************** */

#experience{
    color: #292929;
    background-color: #faf0e6;
    text-align: center;
    padding: 10px;

}

#education, #jobExperience{
    border: 1px #292929;
    border-style: none none solid none;
}

#education h3, #jobExperience h3{
    text-align: left;
    margin-bottom: 20px;
}

#colExperience{
    padding-left: 0px;
    width: 20%; 
    text-align: left; 
    /*padding-left: 5%;*/
}

#colExperience img{
    margin: 8px 15px 0 0;
    padding-left: 0px;
}

#allExperience{
    overflow-y: auto;
}



/* ************************ SKILLS **************************** */
#skills{
    /*color:#292929;*/
    color: #f2f2f2;
    background-color: #000000;
    /*  #7785ac
        #b93a32 
        #c9605d
    */
    text-align: center;
    padding: 0px;
}
/*
#skills h3{
    border-bottom: 2px solid white;
}
*/

.sectionTitle{
    text-align: center;
    margin-left: 3%;
    border-style: none none solid none;
    border-width: 1px;
    width: 170px;
    margin-bottom: 50px;
}
.allSkills{
    overflow-y: auto;
    padding:10px;
    margin-bottom: 5px;
    height:100%;
}


.allSkillsGrid{
    display:grid;
    grid-template-columns: repeat(4,1fr);
    margin-top: 1%;
    grid-gap:5px;
    justify-content: space-evenly;
    justify-items: center;
    align-content: space-evenly;
    align-items: center;
    position: relative;
}

.softSkills{
    width: 380px;
    height: 400px;
    background-color: none;
    color: #292929;
    margin-bottom: 100px;
    color:white;
    position: relative;
}

.skillIcon{
    height: 20%;
    width: 100%;
    margin-bottom: 10px;
}

.skillIcon img{
    height: 100%;
}

.skillTitle{
    height: 15%;
    width: 100%;
}

.skillDescription{
    height: 65%;
    width: 100%;
    text-align: left;
}

.technologiesGrid{
    display:grid;
    grid-template-columns: repeat(4,1fr);
    margin-top: 1%;
    grid-gap:5px;
    justify-content: space-evenly;
    justify-items: center;
    align-content: space-evenly;
    align-items: center;
    position: relative;
}

.hardSkills{
    width: 300px;
    height: 350px;
    margin-bottom: 50px;
    color:white;
    position: relative;
    padding-top: 9px;
}

.progressSection{
    height: 35%;
    width: 100%;

}

.hardSkillLogo{
    height: 35%;
    width: 100%;

}

.hardSkillLogo img{

    height: 50%;
    top:0;
    left:0;
    position: absolute;
    margin-top: 50px;
    margin-left: 65px;
}


.hardSkillDescription{
    height: 30%;
    width: 100%;

}

.hardSkillDescription p{
    color: gray;
    font-style: italic;
}


.zeroPercent{
    position: absolute;
    top: 110px;
    left: 15px;
}

.hundredPercent{
    position: absolute;
    top: 110px;
    right: 5px;
}
/***********/

.progress span{
    display: none;
}

.progress{
    position: relative;
    width:100%;
    height: 100px;
    float:left;
    text-align: center;
    background-color: #000000;

}
.barOverflow{ /* Wraps the rotating .bar */
    position: relative;
    overflow: hidden; /* Comment this line to understand the trick */
    width: 270px; 
    height: 180px; /* Half circle (overflow) */
    margin-bottom: -14px; /* bring the numbers up */
    background-color: none;
    color:none;
}
.bar{
    position: absolute;
    top: 0; left: 0;
    width: 270px; height: 270px; /* full circle! */
    border-radius: 50%;
    box-sizing: border-box;
    border: 10px solid #000000;     /* half gray, */
    border-bottom-color: white;  /* half azure */
    border-right-color: white;

  }

/* *********************** Projects **************************** */

#projects{
    /*color:#292929;*/
    color:#f2f2f2;
    background-color: #4C5364;
    text-align: center;
    padding: 10px;
}

.projectGrid{
    display:grid;
    grid-template-columns: repeat(3,1fr);
    margin-top: 1%;
    grid-gap:15px;
    justify-content: space-evenly;
    justify-items: center;
    align-content: space-evenly;
    align-items: center;
    position: relative;
}

.individualProject{
    width: 450px;
    height: 550px;
    background-color: white;
    color: #292929;
    margin-bottom: 50px;
    /*border-radius: 10px;*/
    position: relative;

}

.topImg{
    height: 70%;
    width: 100%;
}
.bottomText{
    height: 30%;
    width: 100%;
}

.bottomText p{
    text-align: left;
    font-size:15px;
}

.bottomText strong{
    text-align: center;
}

.moreInformation{
    width:100%;
    height:100%;
    position:absolute;
    top:0;
    left:0;
    z-index:1;
    background:rgba(76,83,100,0.9);
    display:none;
    color: white;
    border: 0.5px solid white;
}

.moreInformation span{
    border-style: none none solid none;
    border-width: 1px;
    margin-bottom: 5px;
}
.moreInformation p{
    text-align: left;
    margin: 5px;
}

.resourcesUsed{
    color:white;
    display: inline-block;
    border-radius: 25px;
    border-style: solid;
    border-width: 2px;
    overflow: hidden;
    padding:5px 10px 5px 10px;
    margin: 10px;
}

.resourcesUsed p{
    text-align: center;
    vertical-align: middle;
    display: table-cell;
}


.resourcesUsed span{
    width: 100%;
    text-align: center;
}

.individualProject:hover .moreInformation{
    display: block;
}

.helpfulLink{
    padding-left: 0px;
    padding-right: 0px;
    margin-top: 5px;
    /*text-decoration: underline;*/
    
}

.helpfulLink img{
    margin-top: -4px;
}

.moreInformation span{
    font-size: 20px;
}

.moreInformation h1{
    margin-top:20px;
}

@media (max-width: 1500px) {
    #slide img{
        width: 80%;
        height:70%;
        border-radius: 5%;
    }


    .projectGrid {
      grid-template-columns: repeat(2, 1fr);
    }

    .main{
        font-size: 12vh;
    }
    .aspiring{
        font-size: 4vh;
    }
    .input-cursor {
        height: 35%;
    }
    .allSkillsGrid{
        grid-template-columns: repeat(2,1fr);
    }
    .technologiesGrid{
        grid-template-columns: repeat(3,1fr);
    }
    .allBio{
        grid-template-columns: auto;
    }

    .aboutMeDescription{
        margin-left: 0%;
    }
    
    .aboutMeImage{
        margin-right: 0%;
    }
    .yearDescription{
        margin-right: 0%;
    }
  }
  
  @media (max-width: 1000px) {
    #slide img{
        width: 80%;
        height:70%;
        border-radius: 5%;
    }

    .projectGrid {
      grid-template-columns: repeat(1, 1fr);
      gap: 15px;
    }

    .main{
        font-size: 8vh;
        margin-top: 10px;
    }
    .aspiring{
        font-size: 3vh;
    }

    .input-cursor {
        height: 30%;
    }
    .allSkillsGrid{
        grid-template-columns: repeat(1,1fr);
    }

    .technologiesGrid{
        grid-template-columns: repeat(1,1fr);
    }

    .allBio{
        grid-template-columns: auto;
    }
    .aboutMeDescription{
        margin-left: 0%;
    }
    
    .aboutMeImage{
        margin-right: 0%;
        width: 90%;
        height: 90%;
    }
    .yearDescription{
        margin-right: 0%;
    }
    
    #colExperience strong{
        text-align: right;
        width: 50%;
    }
    #colExperience img{
        margin-right: 5%;
        width: 100%;
        margin-top: 5%;
    }
    #colExperience p{
        margin-top:5%
    }

  }

